--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <title>Northcoders News</title>
   </head>
   <body>
-
-  <div id="app">
-
-  </div>
+  <div id="app"></div>
   <script src="/js/bundle.js"></script>
   </body>
 </html>
